<?xml version="1.0"?>
<package>

  <name>bio_ik</name>
  <version>1.0.0</version>
  <description>The bio_ik package</description>
  <maintainer email="sebastian@todo.todo">sebastian</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>tf_conversions</run_depend>

  <export>
    <moveit_core plugin="${prefix}/bio_ik_description.xml"/>
  </export>

</package>
